<resources>
    <string name="app_name">MyQuiz</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="le_grand_quiz">Le grand Quiz</string>
    <string name="let_s_play">Let\'s Play</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="pseudo">Pseudo</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="myquizapp">MyQuizApp</string>
    <string name="vous_avez_d_ja_un_compte">Vous avez déja un compte ?</string>
    <string name="connectez_vous">Connectez-vous</string>
    <string name="pas_encore_de_compte">Pas encore de compte ?</string>
    <string name="inscrivez_vous">Inscrivez-vous</string>
    <string name="dropdown_menu">Dropdown menu</string>
    <string name="username">userName</string>
    <string name="profil">Profil</string>
    <string name="bonjour">Bonjour,</string>
    <string name="informations_personnelles">Informations personnelles</string>
    <string name="adresse_email_profil">Adresse Email :</string>
    <string name="pseudo_profil">Pseudo :</string>
    <string name="r_ponse_1">Réponse 1</string>
    <string name="r_ponse_2">Réponse 2</string>
    <string name="r_ponse_3">Réponse 3</string>
    <string name="r_ponse_4">Réponse 4</string>
    <string name="question">Question?</string>
    <string name="admin">Admin</string>
    <string name="ajouter_une_question">Ajouter une question</string>
    <string name="voir_les_questions">Voir les questions</string>
    <string name="modifier_une_question">Modifier une question</string>
    <string name="supprimer_une_question">SUpprimer une question</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="ajouter_une_question_text">Ajouter une Question</string>
    <string name="question_text">Question</string>
    <string name="r_ponse_1_text">Réponse 1</string>
    <string name="r_ponse_2_text">Réponse 2</string>
    <string name="r_ponse_3_text">Réponse 3</string>
    <string name="r_ponse_4_text">Réponse 4</string>
    <string name="ajouter">Ajouter</string>
    <string name="num_ro_de_la_bonne_r_ponse">Numéro de la bonne réponse</string>
    <string name="liste_des_questions">Liste des questions</string>
    <string name="alert_dialog_title">Valider la suppression</string>
    <string name="alert_dialog_msg">Voulez-vous vraiment supprimer la question ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="alert_dialog_title_back">Quitter le jeu</string>
    <string name="alert_dialog_msg_back">Voulez-vous vraiment quitter le jeu ? ( Attention, si vous quittez le jeu maintenant votre score sera de 0 )</string>
    <string name="alert_dialog_title_finish">Partie terminée !</string>
    <string name="alert_dialog_msg_finish">"Votre score est de "</string>
    <string name="replay">Rejouer</string>
    <string name="leave">Quitter</string>
    <string name="voir_mon_profil">Voir mon profil</string>
    <string name="mes_derniers_scores">Mes derniers scores :</string>
    <string name="modifier_mes_informations">Modifier mes informations</string>
    <string name="modifier_adresse_email">Modifier Adresse Email</string>
    <string name="mot_de_passe2">Mot de Passe :</string>
    <string name="modifier_mot_de_passe">Modifier Mot de Passe</string>
    <string name="supprimer_mon_compte">Supprimer mon compte</string>
    <string name="comfirm">Confirmer</string>
    <string name="cancel">Annuler</string>
    <string name="alert_dialog_delete_confirm">Confirmation Suppression</string>
    <string name="alert_dialog_delete_msg">Voulez vous vraiment supprimer votre compte ? (Toutes les informations liées à ce compte seront perdues)</string>
    <string name="no_score">Aucun score à afficher</string>
    <string name="numberQuestion">"Question n° "</string>
    <string name="availableResponses">Réponses Disponibles :</string>
    <string name="numberGoodResponse">Numéro de la bonne réponse :</string>
</resources>