<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="end"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/btnProfile"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voir_mon_profil"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnAdmin"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnConnection"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnSubscribe"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnLogOut"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_connexion"
        android:textAllCaps="false" />

</LinearLayout>
